Implemented filter menu component as dropdown

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,7 @@
 @import "./lw/alerts";
 @import "./lw/spinner";
 @import "./lw/copyable-link";
+@import "./lw/filter-menu";
 
 // Change default sweetalert z-index
 .swal2-container {
