Hide filter buttons for lower screen sizes

--- a/src/scss/lw/dashboard.scss
+++ b/src/scss/lw/dashboard.scss
@@ -14,5 +14,11 @@
   .lw-dashboard-info {
     display: flex;
     flex-direction: row;
+
+    .lw-balance-filters {
+      @media only screen and (max-width: 1205px) {
+        display: none;
+      }
+    }
   }
 }
