--- a/src/scss/lw/table.scss
+++ b/src/scss/lw/table.scss
@@ -79,9 +79,11 @@ $lw-row-padding-vert: 12px;
           font-size: 13px;
           line-height: 16px;
           text-align: center;
-          @media only screen and (max-width: 1056px) {
-            font-size: 10px;
-            line-height: 13px;
+          &.lw-table-data-container-small {
+            @media only screen and (max-width: 1056px) {
+              font-size: 10px;
+              line-height: 13px;
+            }
           }
         }
 
