--- a/src/scss/lw/login.scss
+++ b/src/scss/lw/login.scss
@@ -157,3 +157,12 @@ $lw-login-logo-total-width: 230px;
   }
 
 }
+
+.lw-checkbox {
+  img {
+    width: 24px;
+    height: 24px;
+    object-fit: contain;
+    cursor: pointer;
+  }
+}
