Updated button hover color

--- a/src/scss/lw/buttons.scss
+++ b/src/scss/lw/buttons.scss
@@ -1,8 +1,8 @@
 @import './variables';
 @import './fonts';
 
-$lw-button-background-color: $lw-bg-1;
-$lw-button-background-hover-color: lighten($lw-button-background-color, 15%);
+$lw-button-background-color: $lw-bg-2;
+$lw-button-background-hover-color: $lw-bg-1;
 $lw-button-text-color: $lw-text-primary;
 $lw-button-transparent-text-color: #444444;
 $lw-button-min-width: 150px;
@@ -62,6 +62,7 @@ button {
   }
   &:hover {
     background-color: darken($lw-button-background-color, 10%);
+    background-color: $lw-button-background-hover-color;
   }
   //&.light-hover {
   //  &:hover {
