--- a/src/scss/lw/variables.scss
+++ b/src/scss/lw/variables.scss
@@ -25,3 +25,5 @@ $lw-nav-selected: #01ffa0; // nav-selected-green
 $lw-modal-default-text-color: #2f3943;
 
 $lw-button-border-radius: 4px;
+
+$lw-animation-duration: 0.5s;
