--- a/src/scss/lw/modal-receive.scss
+++ b/src/scss/lw/modal-receive.scss
@@ -25,3 +25,42 @@
   justify-content: center;
   padding-bottom: 20px;
 }
+
+.lw-modal-addresses-back {
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  margin-left: -10px;
+  align-items: center;
+  cursor: pointer;
+
+  img {
+    margin-right: 5px;
+  }
+
+  span {
+    font-family: IBMPlexSans;
+    font-size: 16px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    color: $lw-secondary-6;
+  }
+}
+
+.lw-modal-addresses-header {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  margin-top: 30px;
+  font-family: IBMPlexSans;
+  font-size: 16px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  color: $lw-secondary-8;
+}
