--- a/src/scss/lw/modal.scss
+++ b/src/scss/lw/modal.scss
@@ -35,15 +35,21 @@
     a.lw-back-btn {
       display: block;
       text-decoration: none;
-      color: $lw-secondary-6;
-      height: 18px;
+      color: $lw-secondary-5;
+      height: 24px;
       position: absolute;
       left: 10px;
       top: 10px;
+      line-height: 24px;
+
+      i {
+        line-height: 24px;
+        margin-right: 5px;
+      }
 
       &:hover, &:active, &:focus {
         text-decoration: none;
-        color: darken($lw-secondary-6, 15%);
+        color: darken($lw-secondary-5, 15%);
       }
 
     }
@@ -52,11 +58,14 @@
       display: block;
       text-decoration: none;
       color: $lw-secondary-6;
-      width: 18px;
-      height: 18px;
+      width: 24px;
+      height: 24px;
+      font-size: 24px;
+      line-height: 24px;
       position: absolute;
-      right: 11px;
-      top: 11px;
+      right: 10px;
+      top: 10px;
+      text-align: center;
 
       &:hover, &:active, &:focus {
         text-decoration: none;
