Replaced spinner icon with spinner image

--- a/src/scss/lw/buttons.scss
+++ b/src/scss/lw/buttons.scss
@@ -71,7 +71,7 @@ button {
   //    background-color: lighten($lw-button-background-color, 20%);
   //  }
   //}
-  &:active {
+  &:not([disabled]):active {
     transform: scale(0.98);
   }
 
