--- a/src/scss/lw/login.scss
+++ b/src/scss/lw/login.scss
@@ -79,6 +79,10 @@ $lw-login-logo-total-width: 230px;
     padding-right: 10px;
     vertical-align: middle;
 
+    &:disabled:hover {
+      opacity: 1;
+    }
+
     $svg-icon-height: 24px;
 
     &[type=submit] {
@@ -176,5 +180,21 @@ $lw-login-logo-total-width: 230px;
     &:hover {
       color: lighten($lw-secondary-6, 15%);
     }
+  }
+}
+
+.lw-login-loading-spinner {
+  display: inline-block;
+  animation-name: spin;
+  animation-duration: 2000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+};
+@keyframes spin {
+  from {
+    transform:rotate(0deg);
+  }
+  to {
+    transform:rotate(360deg);
   }
 }
