--- a/src/scss/lw/login.scss
+++ b/src/scss/lw/login.scss
@@ -185,10 +185,12 @@ $lw-login-logo-total-width: 230px;
 
 .lw-login-loading-spinner {
   display: inline-block;
-  animation-name: spin;
-  animation-duration: 2000ms;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+  &:not(.no-spin) {
+    animation-name: spin;
+    animation-duration: 2000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
 };
 @keyframes spin {
   from {
