--- a/src/scss/lw/transactions.scss
+++ b/src/scss/lw/transactions.scss
@@ -81,3 +81,15 @@
 .lw-transactions-asset-image > div {
   justify-content: center;
 }
+
+.lw-transactions-panel-refresh-button {
+  font-family: IBMPlexMono;
+  font-size: 13px;
+  margin-left: 9px;
+
+  .lw-transactions-panel-refresh-button-label {
+    display: inline-block;
+    vertical-align: bottom;
+    padding-bottom: 1px;
+  }
+}
