Fixed portfolio chart position

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,7 @@
 @import "./lw/spinner";
 @import "./lw/copyable-link";
 @import "./lw/filter-menu";
+@import "./lw/chart";
 
 // Change default sweetalert z-index
 .swal2-container {
