--- a/src/scss/lw/chart.scss
+++ b/src/scss/lw/chart.scss
@@ -7,6 +7,8 @@
 }
 .lw-portfolio-chart {
   position: relative;
+  overflow-y: hidden;
+  margin-top: 15px;
 }
 .lw-portfolio-piechart {
   position: absolute;
