--- a/src/scss/lw/variables.scss
+++ b/src/scss/lw/variables.scss
@@ -27,3 +27,6 @@ $lw-modal-default-text-color: #2f3943;
 $lw-button-border-radius: 4px;
 
 $lw-animation-duration: 0.5s;
+
+$default-transition-length: 150ms;
+$default-transition-timing-func: ease;
