--- a/src/scss/lw/copyable-link.scss
+++ b/src/scss/lw/copyable-link.scss
@@ -1,4 +1,5 @@
 @import './variables';
+@import './mixins';
 
 .lw-copyable-link-container {
 
@@ -8,6 +9,7 @@
     color: $lw-text-primary;
     cursor: pointer;
     opacity: 1;
+    @include default-hover-transition(opacity);
 
     &:hover {
       opacity: .85;
@@ -18,6 +20,7 @@
     color: $lw-text-primary;
     text-decoration: none;
     opacity: 1;
+    @include default-hover-transition(opacity);
 
     &:hover, &:focus {
       text-decoration: none;
