--- a/src/scss/lw/modal.scss
+++ b/src/scss/lw/modal.scss
@@ -1,4 +1,5 @@
 @import './variables';
+@import './mixins';
 
 .lw-modal-overlay {
   z-index: 10000;
@@ -66,6 +67,7 @@
       right: 10px;
       top: 10px;
       text-align: center;
+      @include default-hover-transition(color);
 
       &:hover, &:active, &:focus {
         text-decoration: none;
