Fixed padding and margins in balance area around and between items

--- a/src/scss/lw/portfolio.scss
+++ b/src/scss/lw/portfolio.scss
@@ -13,7 +13,5 @@
   flex-direction: column;
   justify-content: flex-start;
 
-  .lw-card-container {
-    margin-top: 25px;
-  }
+  .lw-card-container {}
 }
