Adjust transaction balance header to match portfolio

--- a/src/scss/lw/transactions.scss
+++ b/src/scss/lw/transactions.scss
@@ -1,17 +1,8 @@
 @import './variables';
+@import './portfolio';
 
 .lw-transactions-container {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  @extend .lw-portfolio-container;
 }
 .lw-table-top-label {
   font-family: IBMPlexMono;
