Hid x scrollbar on chart when resizing window in windows

--- a/src/scss/lw/chart.scss
+++ b/src/scss/lw/chart.scss
@@ -8,6 +8,7 @@
 .lw-portfolio-chart {
   position: relative;
   overflow-y: hidden;
+  overflow-x: hidden;
   margin-top: 15px;
 }
 .lw-portfolio-piechart {
