Not allow text wrap in balance

--- a/src/scss/lw/balance.scss
+++ b/src/scss/lw/balance.scss
@@ -14,6 +14,7 @@
 
   .lw-balance-container {
     line-height: 1;
+    white-space: pre;
     .lw-balance-current-balance {
       font-weight: 600;
       margin-bottom: 0;
