WIP - add beta warning to login screen

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,6 +28,7 @@
 @import "./lw/filter-menu";
 @import "./lw/chart";
 @import "./lw/mixins";
+@import "./lw/beta-warning";
 
 // Change default sweetalert z-index
 .swal2-container {
